fixtures/errors/incomplete_fn/incomplete_fn.js
function add(temp1, temp2) {
  const a = temp1;
  const b = temp2;
  return a + b;
}
function () {
}
x  5;
//# sourceMappingURL=./incomplete_fn.esc.map
